--- a/api_env/templates/index.html
+++ b/api_env/templates/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!-- <!-- <!DOCTYPE html>
 <html>
 
 <head>
@@ -36,7 +36,7 @@
 
 </html> -->
 
-<!doctype html>
+<!-- <!doctype html>
 <html lang="en">
 
 <head>
@@ -56,8 +56,8 @@
         <option>Technology</option>
         <option>Furniture</option>
         <option>Office Supplies</option>
-      </select>
-    </div>
+      </select> -->
+<!-- </div>
       <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Discount</label>
           <input type="number" class="form-control" id="Discount" aria-describedby="emailHelp">
@@ -67,8 +67,8 @@
           <label for="exampleInputEmail1" class="form-label">Profit</label>
           <input type="number" class="form-control" id="Profit" aria-describedby="emailHelp">
           <div id="Profit" name="Profit" class="form-text">Profit</div>
-        </div>
-    <!-- <div class="col-md-4">
+        </div> -->
+<!-- <div class="col-md-4">
       <label for="Region" class="form-label">State</label>
       <select name="Region" id="Region" class="form-select">
         <option selected>Choose...</option>
@@ -78,22 +78,70 @@
         <option>West</option>
       </select>
     </div> -->
-    <!-- <div class="col-md-4">
+<!-- <div class="col-md-4">
       <label for="inputState" class="form-label">State</label>
       <select id="inputState" class="form-select">
         <option selected>Choose...</option>
         <option>...</option>
       </select>
     </div> -->
-    
-    <div class="col-12">
+
+<!-- <div class="col-12">
       <button type="submit" class="btn btn-primary">Submit</button>
     </div>
   </form>
-  <h2> {{prediction_text}} </h2>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+  <h2> {{prediction_text}} </h2> -->
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script> -->
+<!-- </body>
+
+</html> -->
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Superstore Sales Prediction</title>
+</head>
+
+<body>
+  <h1>Superstore Sales Prediction</h1>
+  <form id="sales-form" action="{{ url_for('predict')}}" method="POST">
+    <label for="profit">Profit:</label>
+    <input type="text" id="profit" name="profit" required><br><br>
+    <label for="quantity">Quantity:</label>
+    <input type="number" id="quantity" name="quantity" required><br><br>
+    <label for="Category_Furniture">Category_Furniture:</label>
+    <input type="number" id="Category_Furniture" name="Category_Furniture" required><br><br>
+    <label for="Category_Office_Supplies">Category_Office Supplies:</label>
+    <input type="number" id="Category_Office_Supplies" name="Category_Office_Supplies" required><br><br>
+    <label for="Category_Furniture">Category_Technology:</label>
+    <input type="number" id="Category_Technology" name="Category_Technology" required><br><br>
+    <input type="submit" value="Predict Sales">
+  </form>
+  <div id="result"></div>
+  <!-- <h2> {{ prediction_text }} </h2> -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $('#sales-form').submit(function (event) {
+        event.preventDefault();
+        var form_data = $(this).serialize();
+        $.ajax({
+          type: 'POST',
+          url: './predict_sales',
+          contentType: 'application/json',
+          data: JSON.stringify(form_data),
+          success: function (response) {
+            $('#result').html('Predicted Sales: $' + response['predicted_sales']);
+          },
+          error: function (xhr) {
+            alert('Error: ' + xhr.responseText);
+          }
+        });
+      });
+    });
+  </script>
 </body>
 
 </html>
