--- a/Superstore_sales/templates/index.html
+++ b/Superstore_sales/templates/index.html
@@ -1,25 +1,100 @@
-<!DOCTYPE html>
 <html>
+
 <head>
-	<title>Superstore Sales Prediction</title>
+    <meta charset="utf-8">
+    <title>Super Store Sales: Sign in</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+    <link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
+
 <body>
-	<h1>Superstore Sales Prediction</h1>
-	<form action="{{ url_for('predict') }}" method="POST">
-		<label for="profit">Profit:</label>
-		<input type="number" id="profit" name="profit" required><br><br>
-		<label for="quantity">Quantity:</label>
-		<input type="number" id="quantity" name="quantity" required><br><br>
-		<label for="category">Category:</label>
-		<select id="category" name="category" required>
-			<option value="Category_Furniture">Furniture</option>
-			<option value="Category_Office Supplies">Office Supplies</option>
-			<option value="Category_Technology">Technology</option>
-		</select><br><br>
-		<input type="submit" value="Predict">
-	</form>
-	{% if prediction_text %}
-		<p>{{ prediction_text }}</p>
-	{% endif %}
+    <div class="login-root">
+        <div class="box-root flex-flex flex-direction--column" style="min-height: 100vh;flex-grow: 1;">
+            <div class="loginbackground box-background--white padding-top--64">
+                <div class="loginbackground-gridContainer">
+                    <div class="box-root flex-flex" style="grid-area: top / start / 8 / end;">
+                        <div class="box-root"
+                            style="background-image: linear-gradient(white 0%, rgb(247, 250, 252) 33%); flex-grow: 1;">
+
+                        </div>
+                    </div>
+                    <div class=" box-root flex-flex" style="grid-area: 4 / 2 / auto / 5;">
+                        <div class="box-root box-divider--light-all-2 animationLeftRight tans3s" style="flex-grow: 1;">
+                        </div>
+                    </div>
+                    <div class="box-root flex-flex" style="grid-area: 6 / start / auto / 2;">
+                        <div class="box-root box-background--blue800" style="flex-grow: 1;"></div>
+                    </div>
+                    <div class="box-root flex-flex" style="grid-area: 7 / start / auto / 4;">
+                        <div class="box-root box-background--blue animationLeftRight" style="flex-grow: 1;"></div>
+                    </div>
+                    <div class="box-root flex-flex" style="grid-area: 8 / 4 / auto / 6;">
+                        <div class="box-root box-background--gray100 animationLeftRight tans3s" style="flex-grow: 1;">
+                        </div>
+                    </div>
+                    <div class="box-root flex-flex" style="grid-area: 2 / 15 / auto / end;">
+                        <div class="box-root box-background--cyan200 animationRightLeft tans4s" style="flex-grow: 1;">
+                        </div>
+                    </div>
+                    <div class="box-root flex-flex" style="grid-area: 3 / 14 / auto / end;">
+                        <div class="box-root box-background--blue animationRightLeft" style="flex-grow: 1;"></div>
+                    </div>
+                    <div class="box-root flex-flex" style="grid-area: 4 / 17 / auto / 20;">
+                        <div class="box-root box-background--gray100 animationRightLeft tans4s" style="flex-grow: 1;">
+                        </div>
+                    </div>
+                    <div class="box-root flex-flex" style="grid-area: 5 / 14 / auto / 17;">
+                        <div class="box-root box-divider--light-all-2 animationRightLeft tans3s" style="flex-grow: 1;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box-root padding-top--24 flex-flex flex-direction--column" style="flex-grow: 1; z-index: 9;">
+                <div class="heading box-root padding-top--48 padding-bottom--24 flex-flex flex-justifyContent--center"
+                    style="margin-top:-20px;">
+                    <h1 style="z-index: 1;"><a href="" rel="dofollow">Super Store Sales Prediction</a></h1>
+                </div>
+                <div class="formbg-outer">
+                    <div class="formbg">
+                        <div class="formbg-inner padding-horizontal--48" style="margin-top:75px;">
+                            <span class="padding-bottom--15" style="text-align: center;"><b>Enter The Details</b></span>
+                            <form id="stripe-login" action="{{ url_for('predict') }}" method="POST">
+                                <div class="field padding-bottom--24">
+                                    <label for="quantity"><b>QUANTITY:</b></label>
+                                    <input class="form-select-lg mb-3" type="number" id="quantity" name="quantity"
+                                        required>
+                                </div>
+
+                                <div class="field padding-bottom--24">
+                                    <label for="profit"><b>PROFIT:</b></label>
+                                    <input type="number" id="profit" name="profit" required>
+                                </div>
+
+                                <div class="field padding-bottom--24">
+                                    <label for="category"><b>CATEGORY:</b></label>
+                                    <select name="category" id="category" class="form-select" style="width: 352px;"
+                                        required>
+                                        <option value="Category_Furniture">Furniture</option>
+                                        <option value="Category_Office Supplies">Office Supplies</option>
+                                        <option value="Category_Technology">Technology</option>
+                                    </select>
+                                </div>
+                                <div class="field padding-bottom--24">
+                                    <input type="submit" name="submit" value="Predict">
+                                </div>
+                            </form>
+                            {% if prediction_text %}
+                            <h2>{{ prediction_text }}</h2>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
 </body>
+
 </html>
